--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
@@ -19,8 +19,9 @@
     <ui:param name="_showDateChange" value="#{true}"/>
     <ui:param name="_showCompany"    value="#{true}"/>
     
-    <ui:param name="_CreateGroupLabel" value="#{bundle.CreateDepartament}" />
-    <ui:param name="_CreateItemLabel" value="#{bundle.CreateStaff}" />    
+    <ui:param name="_CreateGroupLabel" value="#{bundle.CreateDepartament}"/>
+    <ui:param name="_CreateItemLabel" value="#{bundle.CreateStaff}"/> 
+    <ui:param name="_CreateRootLabel" value="#{bundle.CreateCompany}"/>
        
     <!-- специфичные колонки таблицы обозревателя для "Штатной единицы"-->
     <ui:define name="specDetailColumns">       
