--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -36,62 +36,67 @@
             var itemChange = 0;
         </script>
 
-        <h:form id="#{_frm}" style="font-size: 90%; height: 100%;">
-            <p:remoteCommand name="onChangeItem" immediate="true" 
-                             actionListener="#{_bean.onItemChange()}"
-                             oncomplete="return itemChange = 0;">            
-            </p:remoteCommand>
+        <pe:layout fullPage="true" options="#{_bean.cardLayoutOptions}">
+            <p:ajax event="resize" listener="#{_bean.handleResize}"/> 
+            <pe:layoutPane position="center" resizable="true">
+                <h:form id="#{_frm}" style="font-size: 90%; height: 100%;">                   
+                    <p:remoteCommand name="onChangeItem" immediate="true" 
+                                     actionListener="#{_bean.onItemChange()}"
+                                     oncomplete="return itemChange = 0;">            
+                    </p:remoteCommand>
 
-            <p:hotkey bind="esc" id="hotskey"
-                      immediate="true"                             
-                      onstart="document.getElementById('#{_frm}:btnCancel').click();"> 
-            </p:hotkey> 
+                    <p:hotkey bind="esc" id="hotskey"
+                              immediate="true"                             
+                              onstart="document.getElementById('#{_frm}:btnCancel').click();"> 
+                    </p:hotkey> 
 
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank ui-grid-col-12">
-                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                <p:tabView orientation="left" id="mainTabView" >
+                    <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding">                        
+                        <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding">
+                            <ui:insert name="page_body">Body<br /></ui:insert>
 
-                    <ui:insert name="page_body">Body<br /></ui:insert>
-
-                    <ui:include src="/view/common/dict-rights.xhtml"/>
-                    <ui:include src="/view/common/dict-info.xhtml"/>
-                    <ui:include src="/view/common/dict-log.xhtml"/> 
-                </p:tabView>   
-
-                <p:toolbar >
-                    <f:facet name="left">
-                        <p:splitButton  id="btnPrint" value="#{bundle.Actions}" title="#{bundle.Actions}" 
-                                        rendered="#{_bean.editedItem.id != null and !_bean.editedItem.deleted}"
-                                        icon="ui-icon-gear">
-                            <p:menuitem icon="ui-icon-document" value="#{bundle.CardItem}" title="#{bundle.CardItem}"
-                                        actionListener="#{_bean.onPreViewItemCard()}"/>
-                            <p:menuitem icon="ui-icon-star" value="#{bundle.AddToFavorites}" title="#{bundle.AddToFavorites}"                                                
-                                        actionListener="#{_bean.addInFavorites(_bean.editedItem)}"/> 
-                            <ui:insert name="specMenuButtons" />
-                        </p:splitButton>
-                    </f:facet>
-                    <f:facet name="right">
-                        <p:commandButton id="btnSave" value="#{bundle.Save}" title="#{bundle.SaveAndClose}"
-                                         rendered="#{!_bean.isReadOnly()}"
-                                         icon="ui-icon-circle-check"                                      
-                                         update="#{_frm}"
-                                         action="#{_bean.prepSaveItemAndClose()}"
-                                         onclick="if (itemChange == 1) {onChangeItem();}">
-                            <f:param name="isRequired" value="true"/>
-                        </p:commandButton>
-                        <p:commandButton id="btnCancel" value="#{bundle.Close}" title="#{bundle.CloseCard}"
-                                         immediate="true"                                                 
-                                         action="#{_bean.onCancelItemSave()}"
-                                         icon="ui-icon-circle-close"
-                                         onclick="if (itemChange == 1)
+                            <ui:include src="/view/common/dict-rights.xhtml"/>
+                            <ui:include src="/view/common/dict-info.xhtml"/>
+                            <ui:include src="/view/common/dict-log.xhtml"/> 
+                        </p:tabView>   
+                        <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding"/>
+                        <p:toolbar >
+                            <f:facet name="left">
+                                <p:splitButton  id="btnPrint" value="#{bundle.Actions}" title="#{bundle.Actions}" 
+                                                rendered="#{_bean.editedItem.id != null and !_bean.editedItem.deleted}"
+                                                icon="ui-icon-gear">
+                                    <p:menuitem icon="ui-icon-document" value="#{bundle.CardItem}" title="#{bundle.CardItem}"
+                                                actionListener="#{_bean.onPreViewItemCard()}"/>
+                                    <p:menuitem icon="ui-icon-star" value="#{bundle.AddToFavorites}" title="#{bundle.AddToFavorites}"                                                
+                                                actionListener="#{_bean.addInFavorites(_bean.editedItem)}"/> 
+                                    <ui:insert name="specMenuButtons" />
+                                </p:splitButton>
+                            </f:facet>
+                            <f:facet name="right">
+                                <p:commandButton id="btnSave" value="#{bundle.Save}" title="#{bundle.SaveAndClose}"
+                                                 rendered="#{!_bean.isReadOnly()}"
+                                                 icon="ui-icon-circle-check"                                      
+                                                 update="#{_frm}"
+                                                 action="#{_bean.prepSaveItemAndClose()}"
+                                                 onclick="if (itemChange == 1) {
+                                                             onChangeItem();
+                                                         }">
+                                    <f:param name="isRequired" value="true"/>
+                                </p:commandButton>
+                                <p:commandButton id="btnCancel" value="#{bundle.Close}" title="#{bundle.CloseCard}"
+                                                 immediate="true"                                                 
+                                                 action="#{_bean.onCancelItemSave()}"
+                                                 icon="ui-icon-circle-close"
+                                                 onclick="if (itemChange == 1)
                                                              onChangeItem();">
-                            <p:ajax event="dialogReturn" listener="#{_bean.onFinalCancelSave}"/>
-                        </p:commandButton>
-                    </f:facet>
-                </p:toolbar>
-            </p:panelGrid>
-            <ui:include src="/view/common/confirm-dlg.xhtml" />
-        </h:form>
+                                    <p:ajax event="dialogReturn" listener="#{_bean.onFinalCancelSave}"/>
+                                </p:commandButton>
+                            </f:facet>
+                        </p:toolbar>
+                    </p:panelGrid>
+                    <ui:include src="/view/common/confirm-dlg.xhtml" />
+                </h:form>    
+            </pe:layoutPane>
+        </pe:layout>
         <ui:include src="/view/sys/noSaveDlg.xhtml" />
     </ui:define>
 </ui:composition>
