--- a/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
@@ -16,121 +16,8 @@
 
     <p:focus for="nameSearche"/>
 
-    <pe:layoutPane position ="center" >
-        <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12" style="padding: 0px;">        
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12" style="padding: 0px;">
-                <p:selectOneRadio value="#{explorerBean.model.searcheInGroups}" layout="pageDirection" rendered="#{explorerBean.treeBean != null}">
-                    <f:selectItem itemLabel="#{bundle.SearcheWitchOutGroup}" itemValue="#{false}" />
-                    <f:selectItem itemLabel="#{bundle.SearcheInCurrentGroup}" itemValue="#{true}" />
-                </p:selectOneRadio>
-                
-                <p:selectBooleanCheckbox itemLabel="#{bundle.SearcheOnlyActualItems}" 
-                                         title="#{bundle.SearcheOnlyActualItemsComments}" 
-                                         value="#{explorerBean.model.onlyActualItem}">
-                </p:selectBooleanCheckbox> 
-
-                <p:outputLabel value="#{bundle.Name}"/>
-                <h:panelGroup styleClass="ui-grid-col-12">
-                    <p:inputText id="nameSearche" 
-                                 value="#{explorerBean.model.nameSearche}"
-                                 styleClass="ui-grid-col-12"
-                                 onkeypress="keyPress();">
-                    </p:inputText>
-                    <p:watermark for="nameSearche" value="#{bundle.InputCreteriaForSearche}" />
-                </h:panelGroup>
-
-                <ui:insert name="searche"/>
-
-                <p:outputLabel value="#{bundle.Author}"/>
-                <p:selectOneMenu value="#{explorerBean.model.authorSearche}" filter="true" converter="usersConvertor" 
-                                 styleClass="ui-grid-col-12">
-                    <f:selectItems value="#{_searcheBean.users}" var="user" itemValue="#{user}" itemLabel="#{user.shortFIO}" />
-                    <f:selectItem value="#{null}" itemLabel="#{bundle.NotSpecified}" itemValue="#{null}"/>
-                </p:selectOneMenu>        
-
-                <p:outputLabel value="#{bundle.States}"/>
-                <p:selectCheckboxMenu id="stateChecks" value="#{explorerBean.model.stateSearche}" label="#{bundle.Select}" 
-                                      styleClass="ui-grid-col-12">
-                    <f:selectItems value="#{_searcheBean.metadatesObj.statesList}" var="state" itemLabel="#{state.name}" itemValue="#{state.id}"/>
-                </p:selectCheckboxMenu>
-            </p:panelGrid>
-
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12" style="padding: 0px;">
-                <p:selectBooleanCheckbox itemLabel="#{bundle.DateCreate}" 
-                                         title="#{bundle.SearcheDateCreate}" 
-                                         value="#{explorerBean.model.dateCreateSearche}">
-                    <p:ajax event="change" partialSubmit="true" update="pnDateCreateSearche"/>
-                </p:selectBooleanCheckbox>   
-
-                <h:panelGroup id="pnDateCreateSearche"> 
-                    <p:panelGrid columns="2" layout="grid" columnClasses="col10r ui-grid-col-1" 
-                                 rendered="#{explorerBean.model.dateCreateSearche}">
-                        #{bundle.With}
-                        <p:calendar value="#{explorerBean.model.dateCreateStart}" id="dateCreateStart" 
-                                    showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
-                                    pattern="dd.MM.yyyy" mask="99.99.9999" 
-                                    required="#{explorerBean.model.dateCreateSearche}"
-                                    requiredMessage="#{bundle.Field} [#{bundle.DateCreate}: #{bundle.With}] #{bundle.MustBeFilled}"
-                                    disabled="#{!explorerBean.model.dateCreateSearche}">
-                            <p:ajax event="dateSelect" update="dateCreateEnd" listener="#{explorerBean.dateCreateStartChange()}"/>
-                        </p:calendar>
-                    </p:panelGrid>
-                    <p:panelGrid columns="2" layout="grid" columnClasses="col10r ui-grid-col-1" 
-                                 rendered="#{explorerBean.model.dateCreateSearche}">
-                        #{bundle.At}
-                        <p:calendar value="#{explorerBean.model.dateCreateEnd}" id="dateCreateEnd" 
-                                    showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
-                                    pattern="dd.MM.yyyy" mask="99.99.9999" 
-                                    required="#{explorerBean.model.dateCreateSearche}"
-                                    requiredMessage="#{bundle.Field} [#{bundle.DateCreate}: #{bundle.At}] #{bundle.MustBeFilled}"
-                                    disabled="#{!explorerBean.model.dateCreateSearche}">
-                        </p:calendar>
-                    </p:panelGrid>
-                </h:panelGroup>
-                <p:selectBooleanCheckbox itemLabel="#{bundle.DateChange}" 
-                                         title="#{bundle.SearcheDateChange}" 
-                                         value="#{explorerBean.model.dateChangeSearche}">
-                    <p:ajax event="change" partialSubmit="true" update="pnDateChangeSearche"/>
-                </p:selectBooleanCheckbox> 
-
-                <h:panelGroup id="pnDateChangeSearche">          
-                    <p:panelGrid columns="2" layout="grid" columnClasses="col10r ui-grid-col-1" rendered="#{explorerBean.model.dateChangeSearche}">
-                        #{bundle.With}
-                        <p:calendar value="#{explorerBean.model.dateChangeStart}" id="dateChangeStart" 
-                                    showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
-                                    pattern="dd.MM.yyyy" mask="99.99.9999" 
-                                    required="#{explorerBean.model.dateChangeSearche}"
-                                    requiredMessage="#{bundle.Field} [#{bundle.DateChange}: #{bundle.With}] #{bundle.MustBeFilled}"
-                                    disabled="#{!explorerBean.model.dateChangeSearche}">
-                            <p:ajax event="dateSelect" update="dateChangeEnd" listener="#{explorerBean.dateChangeStartChange()}"/>
-                        </p:calendar>
-                    </p:panelGrid>
-                    <p:panelGrid columns="2" layout="grid" columnClasses="col10r ui-grid-col-1" rendered="#{explorerBean.model.dateChangeSearche}">
-                        #{bundle.At}
-                        <p:calendar value="#{explorerBean.model.dateChangeEnd}" id="dateChangeEnd"
-                                    showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
-                                    pattern="dd.MM.yyyy" mask="99.99.9999" 
-                                    required="#{explorerBean.model.dateChangeSearche}"
-                                    requiredMessage="#{bundle.Field} [#{bundle.DateChange}: #{bundle.At}] #{bundle.MustBeFilled}"
-                                    disabled="#{!explorerBean.model.dateChangeSearche}">
-                        </p:calendar>
-                    </p:panelGrid>
-                </h:panelGroup>
-
-                <p:separator />
-
-                <p:commandButton id="searcheBtn" title="#{bundle.MakeSearche}"
-                                 icon="ui-icon-search" value="#{bundle.Find}"
-                                 action="#{explorerBean.onSearcheItem}"
-                                 update="#{_tblUpdate}"
-                                 oncomplete="initDND()">
-                </p:commandButton>
-            </p:panelGrid>
-        </p:panelGrid>
-    </pe:layoutPane>
-
-    <pe:layoutPane position="west">
-        <h:panelGrid columns="2" id="abcGrid">
+    <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-4 col-padding, ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" > 
+        <p:panelGrid columns="2" id="abcGrid" layout="grid" columnClasses="ui-grid-col-12 col-padding, ui-grid-col-12 col-padding">
             <p:commandButton value="*" title="#{bundle.StartAnyChars}" styleClass="btABC"
                              actionListener="#{explorerBean.abcSearche}"
                              update="#{_tblUpdate}"
@@ -161,8 +48,114 @@
                     <f:attribute name="action" value="#{abcLocal}" />
                 </p:commandButton>
             </ui:repeat>
+        </p:panelGrid>
 
-        </h:panelGrid>
-    </pe:layoutPane>
+        <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12" style="padding: 0px;">        
+            <p:selectOneRadio value="#{explorerBean.model.searcheInGroups}" layout="pageDirection" rendered="#{explorerBean.treeBean != null}">
+                <f:selectItem itemLabel="#{bundle.SearcheWitchOutGroup}" itemValue="#{false}" />
+                <f:selectItem itemLabel="#{bundle.SearcheInCurrentGroup}" itemValue="#{true}" />
+            </p:selectOneRadio>
+
+            <p:selectBooleanCheckbox itemLabel="#{bundle.SearcheOnlyActualItems}" 
+                                     title="#{bundle.SearcheOnlyActualItemsComments}" 
+                                     value="#{explorerBean.model.onlyActualItem}">
+            </p:selectBooleanCheckbox> 
+
+            <p:outputLabel value="#{bundle.Name}"/>
+            <h:panelGroup styleClass="ui-grid-col-12">
+                <p:inputText id="nameSearche" 
+                             value="#{explorerBean.model.nameSearche}"
+                             styleClass="ui-grid-col-12"
+                             onkeypress="keyPress();">
+                </p:inputText>
+                <p:watermark for="nameSearche" value="#{bundle.InputCreteriaForSearche}" />
+            </h:panelGroup>
+
+            <ui:insert name="searche"/>
+
+            <p:outputLabel value="#{bundle.Author}"/>
+            <p:selectOneMenu value="#{explorerBean.model.authorSearche}" filter="true" converter="usersConvertor" 
+                             styleClass="ui-grid-col-12">
+                <f:selectItems value="#{_searcheBean.users}" var="user" itemValue="#{user}" itemLabel="#{user.shortFIO}" />
+                <f:selectItem value="#{null}" itemLabel="#{bundle.NotSpecified}" itemValue="#{null}"/>
+            </p:selectOneMenu>        
+
+            <p:outputLabel value="#{bundle.States}"/>
+            <p:selectCheckboxMenu id="stateChecks" value="#{explorerBean.model.stateSearche}" label="#{bundle.Select}" 
+                                  styleClass="ui-grid-col-12">
+                <f:selectItems value="#{_searcheBean.metadatesObj.statesList}" var="state" itemLabel="#{state.name}" itemValue="#{state.id}"/>
+            </p:selectCheckboxMenu>
+
+            <p:selectBooleanCheckbox itemLabel="#{bundle.DateCreate}" 
+                                     title="#{bundle.SearcheDateCreate}" 
+                                     value="#{explorerBean.model.dateCreateSearche}">
+                <p:ajax event="change" partialSubmit="true" update="pnDateCreateSearche"/>
+            </p:selectBooleanCheckbox>   
+
+            <h:panelGroup id="pnDateCreateSearche"> 
+                <p:panelGrid columns="2" layout="grid" columnClasses="col10r ui-grid-col-1" 
+                             rendered="#{explorerBean.model.dateCreateSearche}">
+                    #{bundle.With}
+                    <p:calendar value="#{explorerBean.model.dateCreateStart}" id="dateCreateStart" 
+                                showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
+                                pattern="dd.MM.yyyy" mask="99.99.9999" 
+                                required="#{explorerBean.model.dateCreateSearche}"
+                                requiredMessage="#{bundle.Field} [#{bundle.DateCreate}: #{bundle.With}] #{bundle.MustBeFilled}"
+                                disabled="#{!explorerBean.model.dateCreateSearche}">
+                        <p:ajax event="dateSelect" update="dateCreateEnd" listener="#{explorerBean.dateCreateStartChange()}"/>
+                    </p:calendar>
+                </p:panelGrid>
+                <p:panelGrid columns="2" layout="grid" columnClasses="col10r ui-grid-col-1" 
+                             rendered="#{explorerBean.model.dateCreateSearche}">
+                    #{bundle.At}
+                    <p:calendar value="#{explorerBean.model.dateCreateEnd}" id="dateCreateEnd" 
+                                showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
+                                pattern="dd.MM.yyyy" mask="99.99.9999" 
+                                required="#{explorerBean.model.dateCreateSearche}"
+                                requiredMessage="#{bundle.Field} [#{bundle.DateCreate}: #{bundle.At}] #{bundle.MustBeFilled}"
+                                disabled="#{!explorerBean.model.dateCreateSearche}">
+                    </p:calendar>
+                </p:panelGrid>
+            </h:panelGroup>
+            <p:selectBooleanCheckbox itemLabel="#{bundle.DateChange}" 
+                                     title="#{bundle.SearcheDateChange}" 
+                                     value="#{explorerBean.model.dateChangeSearche}">
+                <p:ajax event="change" partialSubmit="true" update="pnDateChangeSearche"/>
+            </p:selectBooleanCheckbox> 
+
+            <h:panelGroup id="pnDateChangeSearche">          
+                <p:panelGrid columns="2" layout="grid" columnClasses="col10r ui-grid-col-1" rendered="#{explorerBean.model.dateChangeSearche}">
+                    #{bundle.With}
+                    <p:calendar value="#{explorerBean.model.dateChangeStart}" id="dateChangeStart" 
+                                showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
+                                pattern="dd.MM.yyyy" mask="99.99.9999" 
+                                required="#{explorerBean.model.dateChangeSearche}"
+                                requiredMessage="#{bundle.Field} [#{bundle.DateChange}: #{bundle.With}] #{bundle.MustBeFilled}"
+                                disabled="#{!explorerBean.model.dateChangeSearche}">
+                        <p:ajax event="dateSelect" update="dateChangeEnd" listener="#{explorerBean.dateChangeStartChange()}"/>
+                    </p:calendar>
+                </p:panelGrid>
+                <p:panelGrid columns="2" layout="grid" columnClasses="col10r ui-grid-col-1" rendered="#{explorerBean.model.dateChangeSearche}">
+                    #{bundle.At}
+                    <p:calendar value="#{explorerBean.model.dateChangeEnd}" id="dateChangeEnd"
+                                showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
+                                pattern="dd.MM.yyyy" mask="99.99.9999" 
+                                required="#{explorerBean.model.dateChangeSearche}"
+                                requiredMessage="#{bundle.Field} [#{bundle.DateChange}: #{bundle.At}] #{bundle.MustBeFilled}"
+                                disabled="#{!explorerBean.model.dateChangeSearche}">
+                    </p:calendar>
+                </p:panelGrid>
+            </h:panelGroup>
+
+            <p:separator />
+
+            <p:commandButton id="searcheBtn" title="#{bundle.MakeSearche}"
+                             icon="ui-icon-search" value="#{bundle.Find}"
+                             action="#{explorerBean.onSearcheItem}"
+                             update="#{_tblUpdate}"
+                             oncomplete="initDND()">
+            </p:commandButton>
+        </p:panelGrid>
+    </p:panelGrid>
 
 </ui:composition>
