--- a/escom-bpm-web/src/main/webapp/view/users/user-сard.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-сard.xhtml
@@ -6,13 +6,13 @@
                 template="/view/templ/templ-card.xhtml">
 
     <ui:param name="_bean" value="#{userCardBean}"/>
-     
+
     <ui:define name="page_body">
         <p:tab id="cardTab" title="#{bundle.Explorer}">  
             <p:panelGrid columns="2" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12"
                          columnClasses="ui-grid-col-12 col-padding, ui-grid-col-12 col-padding" >
                 <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12"
-                             columnClasses="ui-grid-col-12 col-padding" >
+                             columnClasses="ui-grid-col-12" >
 
                     <p:outputLabel value="#{bundle.SecondName}" />
                     <p:inputText id="secondName" value="#{_bean.editedItem.secondName}" 
@@ -56,37 +56,46 @@
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                  onchange="return itemChange = 1;"/>
 
+                </p:panelGrid>
+
+                <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12"
+                             columnClasses="ui-grid-col-12" >
+                    <p:outputLabel value="#{bundle.VisibleName}" />
+                    <p:inputText id="visbleName" value="#{_bean.editedItem.name}"
+                                 disabled="#{_bean.isReadOnly()}"
+                                 styleClass="ui-grid-col-12"
+                                 required="#{param['isRequired'] == 'true'}"                                         
+                                 requiredMessage="#{bundle.Field} [#{bundle.VisibleName}] #{bundle.MustBeFilled}"
+                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                 onchange="return itemChange = 1;"/>
+                    <p:commandButton value="#{bundle.Generate}" title="#{bundle.MakeName}"
+                                     actionListener="#{userCardBean.makeName()}"
+                                     update="visbleName"
+                                     disabled="#{_bean.isReadOnly()}"
+                                     onclick="return itemChange = 1;">                            
+                    </p:commandButton>
+                    <p:spacer/>
+                    
                     <p:outputLabel value="#{bundle.Login}" />
                     <p:inputText id="login" value="#{_bean.editedItem.login}"
                                  disabled="#{_bean.isReadOnly()}"
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                  onchange="return itemChange = 1;">
                     </p:inputText>
-
+                    <p:commandButton value="#{bundle.Generate}" title="#{bundle.MakeName}"
+                                     actionListener="#{userCardBean.makeLogin()}"
+                                     update="login"
+                                     disabled="#{_bean.isReadOnly()}"
+                                     onclick="return itemChange = 1;">  
+                    </p:commandButton>
+                    <p:spacer/>
+                    
                     <p:outputLabel value="#{bundle.password}" />
                     <p:password id="pwl" value="#{_bean.editedItem.password}" 
                                 feedback="true"
                                 disabled="#{_bean.isReadOnly()}"
                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                 onchange="return itemChange = 1;"/>
-                </p:panelGrid>
-                
-                <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12"
-                             columnClasses="ui-grid-col-12 col-padding" >
-                        <p:outputLabel value="#{bundle.VisibleName}" />
-                        <p:inputText id="visbleName" value="#{_bean.editedItem.name}"
-                                     disabled="#{_bean.isReadOnly()}"
-                                     styleClass="ui-grid-col-12"
-                                     required="#{param['isRequired'] == 'true'}"                                         
-                                     requiredMessage="#{bundle.Field} [#{bundle.VisibleName}] #{bundle.MustBeFilled}"
-                                     onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                                     onchange="return itemChange = 1;"/>
-                        <p:commandButton value="#{bundle.Generate}" title="#{bundle.MakeName}"
-                                         actionListener="#{userCardBean.makeName()}"
-                                         update="visbleName"
-                                         disabled="#{_bean.isReadOnly()}"
-                                         onclick="return itemChange = 1;">                            
-                        </p:commandButton>
                 </p:panelGrid>
             </p:panelGrid>
         </p:tab>    
